[metadata]
name = lur
version = 0.0.11
author = Quentin Lurkin
author_email = lur@ecam.be
description = Usefull functions for computing grades at ECAM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qlurkin/lur_python
project_urls =
    Bug Tracker = https://github.com/qlurkin/lur_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    frozendict

[options.packages.find]
where = src
